--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <nav class='navbar navbar-default' role='navigation'>
     <ul class='nav navbar-nav'>
-      <!-- <li> {{#link-to 'posts'}}Posts{{/link-to}}</li> -->
+      <li> {{#link-to 'new-item'}}Add Item{{/link-to}}</li>
     </ul>
    </nav>
 
