added front end, auction information available on front page, and popup information on auction information

--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,6 +1,8 @@
 <div class="container">
   <nav class='navbar navbar-default' role='navigation'>
     <ul class='nav navbar-nav'>
+      <li> {{#link-to 'products'}}Main{{/link-to}}</li>
+
       <li> {{#link-to 'new-item'}}Add Item{{/link-to}}</li>
     </ul>
    </nav>
