--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,18 @@
+#modal-920893 {
 
+}
+
+#product-info li {
+  font-size: 20px;
+}
+
+.thumbnail {
+  height: 240px;
+  max-width: 340px;
+}
+
+
+body {
+  font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+
+}
