--- a/templates/products.hbs
+++ b/templates/products.hbs
@@ -1,8 +1,4 @@
 <h1 class="page-header text-center">TORHUS: Master Curators of the Universe</h1>
-
-<h2>Current Auctions</h2>
-
-
 <div class="row clearfix">
 		<div class="col-md-12 column">
 			<div class="carousel slide" id="carousel-74374">
@@ -141,3 +137,68 @@
 			{{#link-to 'new-item' classNames="btn btn-block btn-info"}}Add Auction Item{{/link-to}}
 		</div>
 	</div>
+
+<div class="row clearfix">
+	<div class="col-md-12 column">
+		<br>
+			{{#each}}
+				<div class="well row clearfix">
+					<div class="col-md-4 column">
+						<a id="modal-920893" href="#modal-container-920893" data-toggle="modal"><img src="{{image}}" class="thumbnail" /></a>
+
+						<div class="modal fade" id="modal-container-920893" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+							<div class="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+										<h4 class="modal-title" id="myModalLabel">
+											<strong>{{id}}</strong>: {{title}}
+										</h4>
+									</div>
+
+									<div class="modal-body">
+										<div class="row clearfix">
+												<div class="col-md-6 column">
+													<img src="{{image}}" />
+												</div>
+												<div class="col-md-6 column">
+													<p>From the {{owner}} collection.</p>
+													<p>Acquired in {{year}}</p>
+													<p>Estimated Starting Bid: {{price}}</p>
+													<p>Description: {{description}}</p>
+													<p>Backstory: {{backstory}}</p>
+												</div>
+											</div>
+
+									</div>
+								</div>
+							</div>
+						</div>
+
+
+
+
+					</div>
+					<div class="col-md-4 column">
+						<p class="lead">
+							<strong>Item #:</strong> {{id}}
+						</p>
+						<h2><strong>{{#link-to 'product' this.id}}{{title}}{{/link-to}}</strong></h2>
+					</div>
+					<div class="col-md-4 column">
+						<ul id="product-info">
+							<li>
+								<strong>Owner: </strong> {{owner}}
+							</li>
+							<li>
+								<strong>Estimated Starting Price:</strong> {{price}}
+							</li>
+							<li>
+								<strong>Condition:</strong> {{condition}}
+							</li>
+						</ul>
+					</div>
+				</div>
+			{{/each}}
+	</div>
+</div>
