--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,7 +1,11 @@
 <div class="container">
   <nav class='navbar navbar-default' role='navigation'>
     <ul class='nav navbar-nav'>
-      <li> {{#link-to 'products'}}Main{{/link-to}}</li>
+      <li> {{#link-to 'auctions'}}Main{{/link-to}}</li>
+      <li> {{#link-to 'new-auction'}}Add Auction{{/link-to}}</li>
+
+      <li> {{#link-to 'products'}}Catalogs{{/link-to}}</li>
+
 
       <li> {{#link-to 'new-item'}}Add Item{{/link-to}}</li>
     </ul>
