update aucitons page to be able to add items to an individual auction

--- a/templates/new-auction.hbs
+++ b/templates/new-auction.hbs
@@ -21,7 +21,7 @@
 
   <div class="well form-group">
     <label for="curator">Curator</label>
-    {{textarea id="curator" class="form-control" rows="5" value=curator}}
+    {{input id="curator" class="form-control" value=curator}}
   </div>
   <button class="btn btn-primary"  {{action 'save'}}>Save</button>
 </form>
