--- a/templates/products.hbs
+++ b/templates/products.hbs
@@ -1,4 +1,4 @@
-<h1 class="page-header text-center">TORHUS: Master Curators of the Universe</h1>
+<h1 class="page-header text-center">Master Item List</h1>
 <div class="row clearfix">
 		<div class="col-md-12 column">
 			<div class="carousel slide" id="carousel-74374">
