add element to auctions page to show a carousel with an item form each auction and list out auction information wiht image

--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,13 +1,13 @@
 <div class="container">
   <nav class='navbar navbar-default' role='navigation'>
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Star-Bay</a>
+    </div>
     <ul class='nav navbar-nav'>
       <li> {{#link-to 'auctions'}}Main{{/link-to}}</li>
       <li> {{#link-to 'new-auction'}}Add Auction{{/link-to}}</li>
+      <li> {{#link-to 'products'}}All Items{{/link-to}}</li>
 
-      <li> {{#link-to 'products'}}Catalogs{{/link-to}}</li>
-
-
-      <li> {{#link-to 'new-item'}}Add Item{{/link-to}}</li>
     </ul>
    </nav>
 
