--- a/templates/auction.hbs
+++ b/templates/auction.hbs
@@ -55,14 +55,16 @@
                   <div class="modal-body">
                     <div class="row clearfix">
                         <div class="col-md-6 column">
-                          <img src="{{image}}" />
+                          <img class="thumbnail" src="{{image}}" />
                         </div>
                         <div class="col-md-6 column">
+                          <div id="deets">
                           <p>From the {{owner}} collection.</p>
                           <p>Acquired in {{year}}</p>
                           <p>Estimated Starting Bid: {{price}}</p>
                           <p>Description: {{description}}</p>
                           <p>Backstory: {{backstory}}</p>
+                        </div>
                         </div>
                       </div>
 
@@ -76,9 +78,12 @@
 
           </div>
           <div class="col-md-4 column">
+            <p class = "lead" id="auctionname">{{auctions.name}}</p>
             <p class="lead">
               <strong>Item #:</strong> {{id}}
             </p>
+
+
             <h2><strong>{{#link-to 'product' this.id}}{{title}}{{/link-to}}</strong></h2>
           </div>
           <div class="col-md-4 column">
