--- a/templates/products.hbs
+++ b/templates/products.hbs
@@ -5,7 +5,7 @@
 				<div class="carousel-inner">
 					<div class="item active">
 						<a href="#">
-						<img alt="" src="img/logo.png" /></a>
+						<img alt="" src="img/starbaylogo.png" /></a>
 						<div class="carousel-caption">
 						</div>
 					</div>
