--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,24 @@ body {
 
 }
 
+#deets {
+  float:right;
+}
 
+#auctionname{
+  margin-top: 0px;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
 
-.item img {
-  *max-height: 474px;*/
+.carousel-inner img {
+  height: 100px;
+}
+.carousel-inner{
+  width:100%;
+  max-height: 424px;
+}
 
+.carousel-inner .item img {
+    margin: 0 auto;
 }
