add delete auction and all associated items

--- a/templates/auction.hbs
+++ b/templates/auction.hbs
@@ -9,7 +9,7 @@
         <div class="carousel-inner">
           <div class="item active">
             <a href="#">
-            <img alt="" src="img/logo.png" /></a>
+            <img alt="" src="img/starbaylogo.png" /></a>
             <div class="carousel-caption">
             </div>
           </div>
@@ -109,5 +109,5 @@
   </div>
 </div>
 
-
+<button type="button" class="btn btn-block btn-warning" {{action 'delete'}}>Remove Auction</button>
 {{/if}}
