--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <nav class='navbar navbar-default' role='navigation'>
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Star-Bay</a>
+      <a id="nav" class="navbar-brand" href="/">Star-Bay</a>
     </div>
     <ul class='nav navbar-nav'>
       <li> {{#link-to 'auctions'}}Main{{/link-to}}</li>
